Change history for ph-scale
================================================================================

DESIGN ISSUES
- Laurie's # (or ratio) of particles for pH=6=8 (see her Excel document):
    pH      H3O+    OH-
    8.0      5      500
    7.5     16      160
    7.0     50       50
    6.5    160       16
    6.0    500        5
- how to combine color of liquid + water?
- what to do with liquid color when pH is changed via pH slider or bars?
- what happens when dragging bars would result in pH outside range?

HIGH PRIORITY:

MEDIUM PRIORITY:
- faucet doesn't turn on when filling via "reset all"
- port prototype code to this sim
- make particles of minority species more opaque
- hook up Ratio check box
- add bars to graph
- make bars interactive
- tick marks on graph
- implement linear and log scale switching
- add plumbing going into faucets
- 10x zoom feature for linear graph, zoom into zero

LOW PRIORITY:
- change layout of molecule counts display
- generalize layout code
- address Kathy's problem with prototype and Java 1.4 Random class

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
6/25/08 - add MathUtil.log10
6/25/08 - fix all Math.log with MathUtil.log10 in ph-scale Liquid model
6/25/08 - fix Liquid.pHCombined
6/25/08 - reset liquid model in "reset all"
6/25/08 - fill to 1L on startup or reset
6/25/08 - remove "Choose a liquid" choice from liquid faucet, no longer needed
6/25/08 - create a custom confirmation dialog with "don't ask me again" check box
6/25/08 - request confirmation when changing liquid
6/25/08 - workaround for incorrect pH model for combined liquids
6/25/08 - clean up Liquid model, javadoc, symmetry, etc.
6/24/08 - change pH property to type Double, null mean undefined
6/24/08 - disable slider when beaker is empty